<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>col_pth</name>
  <version>1.0.0</version>
  <description>Package to publish a given path colored, depending on some measured values</description>
  <maintainer email="fabian.john@th-luebeck.de">fiveg</maintainer>
  <license>Apache-2.0</license>
  
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>math</depend>
  <depend>serial</depend>
  <depend>time</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
